fix : DIG-112 루틴 상세 조회 로직 변경 - 루틴의 운동 내역에 대한 DTO 생성 로직이 그룹화 되지 않아 운동 레벨에 생성이 되는 문제가 발생     - 운동에 맞게 그룹화하여 운동에 대한 내역을 DTO를 생성하여 Exercise에 포함하도록 변경 - DTO에서도 TimeTemplate 객체를 사용하도록 변경